# research-extract-pdf-papers

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  research_server.py  test_redis_chunk.py  test_server.py
papers/2103.05236v2/: papers_info.json
papers/attention_is_all_you_need/: papers_info.json
papers/attention_is_all_you_needed/: papers_info.json
papers/reinforcement_learning/: papers_info.json
papers/rlhf/: papers_info.json
